--- a/www/scss/components/_popup.scss
+++ b/www/scss/components/_popup.scss
@@ -42,6 +42,7 @@
 	height:100%;
 	width:100%;
 	overflow: hidden;
+	z-index: 10;
 }
 
 .line_item_container {
